# vitanet

./: CMakeLists.txt  README.md  test.c
src/: main.cpp
src/classes/: book_class.cpp  category_class.hpp  search_result_class.hpp
src/includes/html-parser/include/flo/html-parser/: definitions.h
src/includes/html-parser/include/flo/html-parser/dom/: dom.h
src/includes/html-parser/include/flo/html-parser/dom/query/: query.h
src/includes/html-parser/src/: parser.c
src/includes/html-parser/src/dom/: appendix.c  comparison.c  dom-util.c  dom.c  modification.c  prependix.c  replacement.c
src/includes/html-parser/src/dom/query/: query-util.c
src/screens/: article_screen.cpp  article_screen.hpp  home_screen.cpp  home_screen.hpp  main_page.cpp  main_page.hpp  main_screen.cpp  search_screen.cpp  search_screen.hpp
src/services/: ime.c  ime.cpp  ime.h  ime.hpp  libcurl.cpp  scraper.cpp  scraper.hpp  scraper.py
